# deadpool

./: .gitignore  Cargo.toml  README.fr.md  README.md  release.sh
.github/workflows/: github_workflows_build.yml  release.yml  tests.yml
cppadapter/: Cargo.toml
cppadapter/src/: lib.rs
deadpool/: Cargo.toml
deadpool-cli/: Cargo.toml
deadpool-cli/src/: main.rs
deadpool-core/: Cargo.toml
deadpool-core/src/: errors.rs  lib.rs
deadpool-gui/: Cargo.toml  build.rs
deadpool-gui/src/: main.rs
deadpool/src/: errors.rs  lib.rs  test.rs
packaging/archlinux/: PKGBUILD  PKGBUILD-AppImage  PKGBUILD-git
packaging/linux/: AppRun  deadpool.desktop  install.sh
packaging/windows/: installer.iss
qtgui/: CMakeLists.txt  README.md
shuffle_cli/: Cargo.toml
shuffle_cli/src/: cli.rs  main.rs
shuffle_cli/tests/: integration_test.rs
shuffle_gui/: Cargo.toml
shuffle_gui/src/: main.rs  password_generator.rs
