[workspace]
resolver = "2"

members = [
	"deadpool",
	"shuffle_cli",
	"shuffle_gui"
]

[workspace.package]
version = "1.5.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
