[package]
name = "deadpool-cli"
version.workspace = true
authors = ["Antidote1911 <antidote1911@gmail.com>"]
license = "MIT"
description = "🔑 Random password generator CLI"
keywords = ["cli", "password"]
categories = ["command-line-utilities"]
homepage = "https://github.com/Antidote1911/deadpool"
repository = "https://github.com/Antidote1911/deadpool"
readme = "README.md"
edition = "2021"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.35", features = ["derive", "cargo"] }
anyhow = "1.0.97"
deadpool-core = { path = "../deadpool-core" }
tempfile = "3.19.1"

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2.1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
