[package]
name = "deadpool"
version = "0.4.0"
edition = "2021"
authors = ["Fabrice Corraire <antidote1911@gmail.com>"]
description = "🔑 random password generator crate"
repository = "https://github.com/Antidote1911/deadpool"
homepage = "https://github.com/Antidote1911/deadpool"
readme = "README.md"
keywords = ["password", "generator", "security"]
categories = ["command-line-utilities", "command-line-interface"]
license = "MIT"

[dependencies]
rand = "0.9.0"
rand_seeder = "0.4.0"
rand_isaac = "0.4.0"
rand_hc = "0.4.0"
thiserror = "2.0.12"
unicode-segmentation = "1.12.0"

[lib]
name="deadpool"
path="src/lib.rs"
