[package]
name = "deadpool"
version.workspace = true
edition = "2021"
authors = ["Fabrice Corraire <antidote1911@gmail.com>"]
description = "🔑 random password generator crate"
repository = "https://github.com/Antidote1911/deadpool"
homepage = "https://github.com/Antidote1911/deadpool"
readme = "README.md"
keywords = ["password", "generator", "security"]
categories = ["command-line-utilities", "command-line-interface"]
license = "MIT"

[lints]
workspace = true

[dependencies]
rand = "0.9.0"
rand_hc = "0.4.0"
thiserror = "2.0.12"

[lib]
name="deadpool"
path="src/lib.rs"
