[package]
name = "shuffle"
version = "0.4.2"
authors = ["Antidote1911 <antidote1911@gmail.com>"]
license = "MIT"
description = "🔑 Random password generator"
keywords = ["cli", "password"]
categories = ["command-line-utilities"]
homepage = "https://github.com/Antidote1911/deadpool"
repository = "https://github.com/Antidote1911/deadpool"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.35", features = ["derive", "cargo"] }
anyhow = "1.0.97"
# deadpool = "1.0.3"
# deadpool = { git = "https://github.com/Antidote1911/deadpool/deadpool", branch = "master" }
# deadpool = { path = "../deadpool" }
deadpool = { path = "../deadpool" }
tempfile = "3.19.1"

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2.1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"

